k8s/gymmanage-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gymmanage-ingress
  namespace: gymmanage
spec:
  ingressClassName: traefik
  rules:
    - host: gymmanage.103.77.243.58.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gymmanage-service
                port:
                  number: 80
